# SnakeGameNokia

./: .gitignore  CMakeLists.txt
include/: Board.hpp  Snake.hpp
src/: Board.cpp  Snake.cpp
ut/: TestBoard.cpp  TestSnake.cpp
